Harden pending exchange requests (ESQL-1042)
Currently, exchange requests may arrive before the data-node request,
and as a result, we add them to a pending list. These pending requests
are later completed when the data-node request arrives or they are
cancelled. However, this may lead to memory/listener leaks if pending
requests are not completed.

To avoid memory/listener leaks and ensure all pending requests are
completed, this PR adds an inactive timeout for pending exchange
requests. This change is also required to remove the sink handler once
it has completed its task (see TODO in
ExchangeService#completeSinkHandler).